# analise-de-credito

./: README.md  app_1.py  dicionario.md  main.py  pyproject.toml  requirements.txt
dados/backup/: test.csv  train.csv
modelo/: xgb.joblib
notebooks/: analise_insights.ipynb
src/etl/: clean_treatment.py  teste_modelos.py
src/models/: builder_model.py  predict_class_risk.py  preprocessing.py  train_roda_model.py
src/pipeline/: pipeline_ml.py
