[project]
name = "src"
version = "0.1.0"
description = "Portifólio de análise de crédito."
authors = [
    {name = "Jackson dos Santos",email = "jacksonsventura@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "kagglehub (>=0.3.13,<0.4.0)",
    "imblearn (>=0.0,<0.1)",
    "xgboost (>=3.1.3,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "streamlit (>=1.52.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
